--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>Click the button below to add a new task!</p>
         <form id="task-form">
             <div class="form-group">
-                <input type="text" name="task-name" placeholder="Enter Task Name" />
+                <input type="text" id="task-name" placeholder="Enter Task Name" />
             </div>
                 <select name="task-type" class="select-dropdown">
                     <option value="" disabled selected>Pick a task type</option>
