--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div class="form-group">
                 <input type="text" id="task-name" placeholder="Enter Task Name" />
             </div>
+            <div class="form-group">
                 <select name="task-type" class="select-dropdown">
                     <option value="" disabled selected>Pick a task type</option>
                     <option value="Print">Print</option>
